auth with JWT / jose/ and next middleware

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:0LFnymdyZpe5GBVz@db.reqydhtyrhskmsdjfmqv.supabase.co:5432/postgres"
+JWT_SECRET="GFREG8E7RHER&er7er7ER&ER&Er7er&Er&e54&#&$3%3$5@35235532%@#%^#$7"
